--- a/latihan6/index.html
+++ b/latihan6/index.html
@@ -21,6 +21,7 @@ rel="stylesheet">
     <ul id="mobilenav" class="sidenav">
   <li><a class="nav" href="#tujuanweb">Tentang Website</a></li>
   <li><a class="nav" href="#tentangstmikkharisma">Tentang STMIK KHARISMA</a></li>
+  <li><a class="nav" href="#biodata">BIODATA</a></li>
   </ul>
   <a href="#" data-target="mobilenav" class="sidenav-trigger">
     <i class="material-icons">menu</i>
