--- a/latihan6/pages/tujuanweb.html
+++ b/latihan6/pages/tujuanweb.html
@@ -10,7 +10,7 @@
     <title>tujuanweb</title>
   </head>
   <body>
-    <a class="nav" href="index.html">&lt;&lt;Daftar Resep</a><hr>
+    <a href="index.html">&lt;&lt;Daftar Resep</a><hr>
     <h3 class="heading red-text">Tujuan Web</h3>
     <p> Tujuan web ini saya buat untuk memenuhi tugas mata kuliah  Desain Web dan Praktikum Desain Web,
       juga untuk mengasah kemampuan mendesain sebuah web menjadi cantik serta saya akan memakai web Sepuluh Kuliner Tradional ini kalau jadi
@@ -18,7 +18,7 @@
 
     <h3 class="heading red-text">Biodata Pembuat Web</h3>
     <p>Ingin Tau Siapa Pembuat Web Sepuluh Kuliner Tradisional
-    Berikut Biodata Pembuat Web Ini Klik=><a class="nav" href="#biodata"><u>Biodata</u></a>
+    Berikut Biodata Pembuat Web Ini Klik=><a class="nav" href="#biodata">Biodata</a>
   </p>
 
   </body>
