--- a/latihan6/pages/biodata.html
+++ b/latihan6/pages/biodata.html
@@ -11,7 +11,7 @@
   </head >
   <body>
   <div class="row">
-    <a class="nav" href="index.html">&lt;&lt;Daftar Resep</a><hr>
+    <a href="index.html">&lt;&lt;Daftar Resep</a><hr>
 
     <h3 class=" heading red-text">BIODATA</h3>
     <div class="col m5 s12">
