--- a/latihan6/pages/tentangstmikkharisma.html
+++ b/latihan6/pages/tentangstmikkharisma.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="row">
-      <a class="nav" href="index.html">&lt;&lt;Daftar Resep</a><hr>
+      <a href="index.html">&lt;&lt;Daftar Resep</a><hr>
     <h3 class="heading red-text">STMIK KHARISMA MAKASSAR </h3>
     <div class="col m5 s12">
       <div class="card z-depth-3">
