--- a/latihan6/pages/bahan/soto.html
+++ b/latihan6/pages/bahan/soto.html
@@ -16,7 +16,7 @@
     <div class="col m5 s12">
       <div class="card z-depth-3">
         <div class="card-image">
-    <img src="../img/sotobahan.jpg" alt="sotobahan" class="img-responsif">
+    <img src="../../img/sotobahan.jpg" alt="sotobahan" class="img-responsif">
   </div>
 </div>
 </div>
