--- a/latihan6/index.html
+++ b/latihan6/index.html
@@ -6,6 +6,7 @@
 rel="stylesheet">
     <link rel="stylesheet" href="css/materialize.min.css" >
     <link rel="stylesheet" href="css/style.css" >
+     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <script type="text/javascript" src="js/loadpage.js"></script>
     <title>Resep</title>
   </head>
