latihan7/indexresep.html

--- a/latihan7/indexresep.html
+++ b/latihan7/indexresep.html
@@ -7,28 +7,28 @@ rel="stylesheet">
     <link rel="stylesheet" href="css/materialize.min.css" >
     <link rel="stylesheet" href="css/style.css" >
      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 <script type="text/javascript" src="js/loadpage.js"></script>
     <title>Resep</title>
   </head>
   <body>
-<nav class="purplechef" role="navigation">
-  <div class="nav-wrapper container">
-    <a href="#" class="brand-logo">MASTER CHEF</a>
-    <ul class="right hide-on-med-and-down">
-      <li><a class="nav" href="#tujuanweb">Tentang Website</a></li>
-      <li><a class="nav" href="#tentangstmikkharisma">Tentang STMIK KHARISMA</a></li>
-    </ul>
+    <nav class="bluechef" role="navigation">
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="#" class="brand-logo white-text">
+          <img src="img/logo6.png" alt="logo" style="height:35px;">Master Chef</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#" class="white-text">Tentang Website</a></li>
+          <li><a href="#" class="white-text">Tentang STMIK KHARISMA</a></li>
+        </ul>
 
-    <ul id="mobilenav" class="sidenav">
-  <li><a class="nav" href="#tujuanweb">Tentang Website</a></li>
-  <li><a class="nav" href="#tentangstmikkharisma">Tentang STMIK KHARISMA</a></li>
-  <li><a class="nav" href="#biodata">BIODATA</a></li>
-  </ul>
-  <a href="#" data-target="mobilenav" class="sidenav-trigger">
-    <i class="material-icons">menu</i>
-  </a>
-</div>
-</nav>
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="#" class="white-text">Tentang Website</a></li>
+          <li><a href="#" class="white-text">Tentang STMIK KHARISMA</a></li>
+        </ul>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
 
 <div class="container">
   <h4 class="red-text">Koleksi Resep 10 Kuliner Tradisional</h4>
