--- a/latihan7/indexresep.html
+++ b/latihan7/indexresep.html
@@ -32,8 +32,36 @@ rel="stylesheet">
 
 <div class="container">
   <h4 class="red-text">Koleksi Resep 10 Kuliner Tradisional</h4>
+  <div class="row">
+    <a href="index.html">&lt;HOME</a>
+  </div>
 
-<div id="body-content"></div>
+<div id="body-content">
+  <div class="row">
+    <div class="col m5 s12">
+    <div class="card z-depth-3">
+      <div class="card-image">
+        <img class="responsive-img" src="img/all.jpg" alt="">
+      </div>
+  </div>
+  </div>
+  <div class="col m7 s12">
+  <div class="collection">
+    <a class="collection-item" href="#pallubasa">Pallu Basa</a>
+    <a class="collection-item" href="#sotopadang">Soto Padang</a>
+    <a class="collection-item" href="#buburmanado">Bubur Manado</a>
+    <a class="collection-item" href="#sopkonro">Sop Konro</a>
+    <a class="collection-item" href="#rawonsurabaya">Rawon Surabaya</a>
+    <a class="collection-item" href="#ayamgorengsasandokhasnusatenggaratimur">Ayam goreng sasando khas Nusa Tenggara Timur</a>
+    <a class="collection-item" href="#ayamlodhokhastulungagung">Ayam lodho khas Tulungagung</a>
+    <a class="collection-item" href="#nasibakeporkalimantantimur">Nasi bakepor Kalimantan Timur</a>
+    <a class="collection-item" href="#papedatelorayam">Papeda telor ayam</a>
+    <a class="collection-item" href="#seblakbandung">Seblak Bandung</a>
+    <a class="collection-item" href="#satelilitayamkhasbali">Sate lilit ayam khas Bali</a>
+  </div>
+  </div>
+  </div>
+</div>
 </div>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
