--- a/latihan7/indexresep.html
+++ b/latihan7/indexresep.html
@@ -41,7 +41,7 @@ rel="stylesheet">
     <div class="col m5 s12">
     <div class="card z-depth-3">
       <div class="card-image">
-        <img class="responsive-img" src="img/all.jpg" alt="">
+        <img class="responsive-img" src="img/all.jpg" alt="lkuliner">
       </div>
   </div>
   </div>
