latihan7/index.html

--- a/latihan7/pages/buburmanado.html
+++ b/latihan7/pages/buburmanado.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div class="row">
-      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+      <a href="indexresep.html">&lt;&lt;Daftar Resep</a>
+      <a href="sotopadang.html">&lt;Back</a>
+      <a href="sopkonro.html">&gt;&gt;Next</a><hr>
 
     <h3 class=" heading red-text">Bubur Manado</h3>
     <div class="col m5 s12">
