--- a/latihan7/pages/sopkonro.html
+++ b/latihan7/pages/sopkonro.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div class="row">
-      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+      <a href="indexresep.html">&lt;&lt;Daftar Resep</a>
+      <a href="buburmanado.html">&lt;Back</a>
+      <a href="rawonsurabaya.html">&gt;&gt;Next</a><hr>
 
     <h3 class="red-text">Sop Konro</h3>
     <div class="col m5 s12">
