--- a/latihan7/pages/ayamgorengsasandokhasnusatenggaratimur.html
+++ b/latihan7/pages/ayamgorengsasandokhasnusatenggaratimur.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div class="row">
-      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+      <a href="indexresep.html">&lt;&lt;Daftar Resep</a>
+      <a href="rawonsurabaya.html">&lt;Back</a>
+      <a href="ayamlodhokhastulungagung.html">&gt;&gt;Next</a><hr>
 
     <h3 class=" heading red-text">Ayam Goreng Sasando Khas Nusa Tenggara Timur</h3>
     <div class="col m5 s12">
