--- a/latihan7/pages/pallubasa.html
+++ b/latihan7/pages/pallubasa.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 <div class="row">
-  <a href="indexresep.html">&lt;&lt; Daftar Resep</a><hr>
+  <a href="indexresep.html">&lt;&lt; Daftar Resep</a>
+  <a href="sotopadang.html">&gt;&gt;Next</a><hr>
+
 
 <h3 class=" heading red-text">Pallubasa</h3>
 <div class="col m5 s12">
