--- a/latihan7/pages/papedatelorayam.html
+++ b/latihan7/pages/papedatelorayam.html
@@ -10,7 +10,9 @@
   </head>
   <body>
   <div class="row">
-    <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+    <a href="indexresep.html">&lt;&lt;Daftar Resep</a>
+    <a href="nasibakeporkalimantantimur.html">&lt;Back</a>
+    <a href="seblakbandung.html">&gt;&gt;Next</a><hr>
 
     <h3 class="heading red-text">Papeda telor ayam</h3>
     <div class="col m5 s12">
