--- a/latihan7/pages/rawonsurabaya.html
+++ b/latihan7/pages/rawonsurabaya.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div class="row">
-      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+      <a href="indexresep.html">&lt;&lt;Daftar Resep</a>
+      <a href="sopkonro.html">&lt;Back</a>
+      <a href="ayamgorengsasandokhasnusatenggaratimur.html">&gt;&gt;Next</a><hr>
 
     <h3 class="heading red-text">Rawon Surabaya</h3>
     <div class="col m5 s12">
