--- a/latihan7/pages/satelilitayamkhasbali.html
+++ b/latihan7/pages/satelilitayamkhasbali.html
@@ -10,7 +10,9 @@
   </head>
   <body>
   <div class="row">
-    <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
+    <a href="indexresep.html">&lt;&lt;Daftar Resep</a>
+    <a href="seblakbandung.html">&lt;Back</a>
+    <a href="pallubasa.html">&gt;&gt;Next</a><hr>
 
 <h3 class=" heading red-text">Sate lilit ayam khas Bali</h3>
 <div class="col m5 s12">
