latihan7/index.html

--- a/latihan7/pages/ayamgorengsasandokhasnusatenggaratimur.html
+++ b/latihan7/pages/ayamgorengsasandokhasnusatenggaratimur.html
@@ -10,10 +10,7 @@
   </head>
   <body>
     <div class="row">
-      <a href="indexresep.html">&lt;&lt;Daftar Resep</a>
-      <a href="rawonsurabaya.html">&lt;Back</a>
-      <a href="ayamlodhokhastulungagung.html">&gt;&gt;Next</a><hr>
-
+      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
     <h3 class=" heading red-text">Ayam Goreng Sasando Khas Nusa Tenggara Timur</h3>
     <div class="col m5 s12">
       <div class="card z-depth-3">
