--- a/latihan7/pages/nasibakeporkalimantantimur.html
+++ b/latihan7/pages/nasibakeporkalimantantimur.html
@@ -10,9 +10,7 @@
   </head>
   <body>
   <div class="row">
-    <a href="indexresep.html">&lt;&lt;Daftar Resep</a>
-    <a href="ayamlodhokhastulungagung.html">&lt;Back</a>
-    <a href="papedatelorayam.html">&gt;&gt;Next</a><hr>
+    <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
 
 <h3 class=" heading red-text">Nasi bakepor Kalimantan Timur</h3>
 <div class="col m5 s12">
