--- a/latihan7/pages/seblakbandung.html
+++ b/latihan7/pages/seblakbandung.html
@@ -10,9 +10,7 @@
   </head>
   <body>
     <div class="row">
-<a href="indexresep.html">&lt;&lt;Daftar Resep</a>
-<a href="papedatelorayam.html">&lt;Back</a>
-<a href="satelilitayamkhasbali.html">&gt;&gt;Next</a><hr>
+<a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
 
     <h3 class="heading red-text">Seblak Bandung</h3>
     <div class="col m5 s12">
