--- a/latihan7/pages/ayamlodhokhastulungagung.html
+++ b/latihan7/pages/ayamlodhokhastulungagung.html
@@ -10,9 +10,7 @@
   </head>
   <body>
     <div class="row">
-      <a href="indexresep.html">&lt;&lt;Daftar Resep</a>
-      <a href="ayamgorengsasandokhasnusatenggaratimur.html">&lt;Back</a>
-      <a href="nasibakeporkalimantantimur.html">&gt;&gt;Next</a><hr>
+      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
   <h3 class="red-text">Ayam lodho khas Tulungagung</h3>
   <div class="col m5 s12">
     <div class="card z-depth-3">
