--- a/latihan7/pages/pallubasa.html
+++ b/latihan7/pages/pallubasa.html
@@ -10,10 +10,7 @@
 </head>
 <body>
 <div class="row">
-  <a href="indexresep.html">&lt;&lt; Daftar Resep</a>
-  <a href="sotopadang.html">&gt;&gt;Next</a><hr>
-
-
+  <a href="indexresep.html">&lt;&lt; Daftar Resep</a><hr>
 <h3 class=" heading red-text">Pallubasa</h3>
 <div class="col m5 s12">
   <div class="card z-depth-3">
