--- a/latihan7/pages/satelilitayamkhasbali.html
+++ b/latihan7/pages/satelilitayamkhasbali.html
@@ -10,9 +10,7 @@
   </head>
   <body>
   <div class="row">
-    <a href="indexresep.html">&lt;&lt;Daftar Resep</a>
-    <a href="#seblakbandung">&lt;Back</a>
-    <a href="#pallubasa">&gt;&gt;Next</a><hr>
+    <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
 
 <h3 class=" heading red-text">Sate lilit ayam khas Bali</h3>
 <div class="col m5 s12">
