--- a/latihan7/pages/sotopadang.html
+++ b/latihan7/pages/sotopadang.html
@@ -10,9 +10,7 @@
   </head>
   <body>
     <div class="row">
-      <a href="indexresep.html">&lt;&lt;Daftar Resep</a>
-      <a href="pallubasa.html">&lt;Back</a>
-      <a href="buburmanado.html">&gt;&gt;Next</a><hr>
+      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
     <h3 class="heading red-text"> Soto Padang </h3>
     <div class="col m5 s12">
       <div class="card z-depth-3">
