latihan8b/index.html

--- a/latihan8b/index.html
+++ b/latihan8b/index.html
@@ -13,7 +13,7 @@
 
 
     <!-- Bootstrap core CSS -->
-<link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -162,7 +162,7 @@ class="filled-in" required />
 </main><!-- /.container -->
 
 
-  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript">
 document.addEventListener('DOMContentLoaded', function() {
 var dateElems = document.querySelectorAll('.datepicker');
