--- a/latihan7/pages/bahan/dagingsapi.html
+++ b/latihan7/pages/bahan/dagingsapi.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <a href="index.html">&lt;&lt;Daftar Resep</a><hr>
+    <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
     <h1 class="heading red-text"> Daging Sapi</h1>
 
   <p>Daging sapi (bahasa Inggris: beef)
@@ -23,6 +23,6 @@
       sapi ini sangat banyak diperdagangkan. Akan tetapi seperti di Indonesia
        dan di berbagai negara Asia lainnya daging ini banyak digunakan untuk
        makanan berbumbu dan bersantan seperti sup konro dan rendang.</p>
-    
+
   </body>
 </html>
