--- a/latihan7/pages/bahan/ayam.html
+++ b/latihan7/pages/bahan/ayam.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="row">
-      <a href="index.html">&lt;&lt;Daftar Resep</a><hr>
+      <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
 <h1 class="heading red-text">Ayam</h1>
 <div class="col m5 s12">
   <div class="card z-depth-3">
