--- a/latihan7/pages/bahan/ikanasin.html
+++ b/latihan7/pages/bahan/ikanasin.html
@@ -11,12 +11,12 @@
   </head>
   <body">
   <div class="row">
-    <a href="index.html">&lt;&lt;Daftar Resep</a><hr>
+    <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
     <h1 class="heading red-text">Ikan Asin</h1>
     <div class="col m5 s12">
       <div class="card z-depth-3">
         <div class="card-image">
-  
+
   </div>
 </div>
 </div>
