--- a/latihan7/index.html
+++ b/latihan7/index.html
@@ -18,13 +18,13 @@
       <a id="logo-container" href="#" class="brand-logo white-text">
         <img src="img/logo6.png" alt="logo" style="height:35px;">Master Chef</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="../tujuanweb.html" class="red-text">Tentang Website</a></li>
-        <li><a href="../tentangstmikkharisma.html" class="red-text">Tentang STMIK KHARISMA</a></li>
+        <li><a href="../tujuanweb.html" class="blue-text">Tentang Website</a></li>
+        <li><a href="../tentangstmikkharisma.html" class="blue-text">Tentang STMIK KHARISMA</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="../tujuanweb.html" class="red-text">Tentang Website</a></li>
-        <li><a href="../tentangstmikkharisma.html" class="red-text">Tentang STMIK KHARISMA</a></li>
+        <li><a href="../tujuanweb.html" class="blue-text">Tentang Website</a></li>
+        <li><a href="../tentangstmikkharisma.html" class="blue-text">Tentang STMIK KHARISMA</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
