--- a/latihan7/pages/dagingsapi.html
+++ b/latihan7/pages/dagingsapi.html
@@ -10,10 +10,16 @@
     <title>daging sapi</title>
   </head>
   <body>
-
+  <div class="row">
     <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
     <h1 class="heading red-text"> Daging Sapi</h1>
-
+    <div class="col m5 s12">
+      <div class="card z-depth-3">
+        <div class="card-image">
+    <img src="../../img/dagingsapi.png" alt="dagingsapi" class="img-responsif">
+  </div>
+</div>
+</div>
   <p>Daging sapi (bahasa Inggris: beef)
     adalah daging yang diperoleh dari sapi yang biasa dan umum
     digunakan untuk keperluan konsumsi makanan. Di setiap daerah,
@@ -23,6 +29,6 @@
       sapi ini sangat banyak diperdagangkan. Akan tetapi seperti di Indonesia
        dan di berbagai negara Asia lainnya daging ini banyak digunakan untuk
        makanan berbumbu dan bersantan seperti sup konro dan rendang.</p>
-
+     </div>
   </body>
 </html>
