--- a/latihan7/pages/ayam.html
+++ b/latihan7/pages/ayam.html
@@ -16,6 +16,7 @@
 <div class="col m5 s12">
   <div class="card z-depth-3">
     <div class="card-image">
+<img src="../img/bagianayam.jpg" alt="bagianayam" class="img-responsif">
 </div>
 </div>
 </div>
