--- a/latihan7/pages/ayamgoreng.html
+++ b/latihan7/pages/ayamgoreng.html
@@ -7,26 +7,22 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial scale= 1.0"/>
     <script type="text/javascript" src="../js/loadpage.js"></script>
-    <title> Ikan Asin</title>
+    <title> Ayam Goreng</title>
   </head>
-  <body">
+  <body>
   <div class="row">
     <a href="indexresep.html">&lt;&lt;Daftar Resep</a><hr>
-    <h1 class="heading red-text">Ikan Asin</h1>
+    <h1 class="heading red-text"> Ayam Goreng </h1>
     <div class="col m5 s12">
       <div class="card z-depth-3">
         <div class="card-image">
-
+    <img src="../../img/ayamgoreng.jpg" alt="ayamgoreng" class="img-responsif">
   </div>
 </div>
 </div>
-  <p>Ikan asin adalah bahan makanan yang terbuat dari daging ikan yang diawetkan
-    dengan menambahkan banyak garam. Dengan metode pengawetan ini daging ikan
-    yang biasanya membusuk dalam waktu singkat dapat disimpan di suhu kamar
-    untuk jangka waktu berbulan-bulan, walaupun biasanya harus ditutup rapat.
-    Selain itu daging ikan yang diasinkan akan bertahan lebih lama dan
-     terhindar dari kerusakan fisik akibat infestasi serangga,
-    ulat lalat dan beberapa jasad renik perusak lainnya.</p>
+    <p>Ayam goreng adalah hidangan yang dibuat dari
+    daging ayam dicampur tepung bumbu yang digoreng dalam
+    minyak goreng panas.</p>
   </div>
   </body>
 </html>
