--- a/latihan6/pages/pallubasa.html
+++ b/latihan6/pages/pallubasa.html
@@ -22,8 +22,8 @@
 </div>
 <div class="col m7 s12">
 <p> Pallu basa adalah makanan tradisional Makassar, Sulawesi Selatan. Seperti Coto Mangkasara (Coto Makassar),
-Pallubasa juga terbuat dari jeroan (isi dalam perut) <a class="nav" href="#bahan/dagingsapi">daging sapi</a> atau daging kerbau. Namun kini kuliner ini telah berkembang menjadi
-pallu basa <a class="nav" href="#bahan/ayam">ayam</a> dan pallu basa kepala <a class="nav" href="#bahan/ikan">ikan</a>. Proses memasaknya pun hampir sama dengan Coto Makassar yang
+Pallubasa juga terbuat dari jeroan (isi dalam perut) <a class="nav" href="#dagingsapi">daging sapi</a> atau daging kerbau. Namun kini kuliner ini telah berkembang menjadi
+pallu basa <a class="nav" href="#ayam">ayam</a> dan pallu basa kepala <a class="nav" href="#ikan">ikan</a>. Proses memasaknya pun hampir sama dengan Coto Makassar yang
 lebih terkenal, yakni jeroan direbus dalam waktu lama.</p>
  <p>Dahulu, Pallubasa dengan daging sapi sirloin dan tenderloin hanya disajikan untuk disantap oleh keluarga kerajaan, sementara bagian jeroan disajikan untuk masyarakat kelas bawah atau abdi dalem pengikut kerajaan.
 Kini, penjual-penjual Pallubasa memberikan bermacam-macam pilihan daging sapi atau jeroan untuk dihidangkan.
