--- a/latihan6/pages/ayamgorengsasandokhasnusatenggaratimur.html
+++ b/latihan6/pages/ayamgorengsasandokhasnusatenggaratimur.html
@@ -22,9 +22,9 @@
 </div>
 <div class="col m7 s12">
     <p>Ada banyak sekali varian olahan ayam goreng, salah satunya adalah ayam goreng sasando yang berasal dari Nusa Tenggara Timur. Hal yang membedakan ayam goreng sasando dengan ayam goreng lainnya adalah bumbu sambalnya. Penasaran kan?</p>
-    <p>Bosan dengan <a class="nav" href= "#bahan/ayamgoreng"class="link">Ayam Goreng</a> yang itu2 saja??!! Tak ada salahnya anda mencoba
+    <p>Bosan dengan <a class="nav" href= "#ayamgoreng"class="link">Ayam Goreng</a> yang itu2 saja??!! Tak ada salahnya anda mencoba
       menu baru yaitu "Ayam Goreng Sasando". Sajian spesial dari provinsi NTT ini menampilkan paduan
-      <a class="nav" href="#bahan/ayam" class="link">Ayam</a> Goreng renyah yang sarat bumbu berpadu dengan saus kental yang gurih dan lumayan pedas.</p>
+      <a class="nav" href="#ayam" class="link">Ayam</a> Goreng renyah yang sarat bumbu berpadu dengan saus kental yang gurih dan lumayan pedas.</p>
     <p>Disantap bersama nasi panas dan lalapan segar sambil mencocol sausnya yang lezat hhmmmm...Ditanggung rasanya cukup menggoda!!
       Selain itu bikinnya juga gampang dan semua bahan2 mudah didapat di sekitar kita. Anda penasaran?? Kalau Iya..silahkan mencoba dan
        semoga sukses. </p>
