--- a/latihan6/pages/ayamlodhokhastulungagung.html
+++ b/latihan6/pages/ayamlodhokhastulungagung.html
@@ -27,7 +27,7 @@ Tak banyak orang yang tahu apa itu ayam lodho. Ayam lodho sendiri telah menjadi 
   <p> Sudah pernah mencicipi kuliner Tulungagung?
     Ternyata kota di Jawa Timur ini punya banyak makanan enak.
     Salah satunya adalah ayam lodho.
-    Berikut ini resep ayam lodho, olahan daging <a class="nav" href = "#bahan/ayam">ayam</a> dari Tulungagung yang khas dan kaya bumbu. </p>
+    Berikut ini resep ayam lodho, olahan daging <a class="nav" href = "#ayam">ayam</a> dari Tulungagung yang khas dan kaya bumbu. </p>
   </div>
 </div>
 <div class="row">
