--- a/latihan6/pages/buburmanado.html
+++ b/latihan6/pages/buburmanado.html
@@ -24,8 +24,8 @@
     <p>Kata tinutuan tidak diketahui asalnya.Sejak kapan tinutuan menjadi makanan khas Kota Manado tidak diketahui dengan jelas.Ada yang mengatakan tinutuan mulai ramai diperdagangkan di beberapa tempat di sudut Kota Manado sejak tahun 1970.
        Ada juga yang mengatakan sejak tahun 1981.Tinutuan dipakai menjadi moto Kota Manado sejak kepemimpinan Wali Kota Jimmy Rimba Rogi dan Wakil Wali Kota Abdi Wijaya Buchari periode 2005-2010, menggantikan moto Kota Manado sebelumnya yaitu Berhikmat.
        Pemerintah Kota Manado melalui Dinas Pariwisata setempat pada tahun 2004 (ada juga yang mengatakan pada pertengahan tahun 2005) menjadikan Kawasan Wakeke, Kecamatan Wenang, Kota Manado, sebagai lokasi wisata makanan khas tinutuan.</p>
-<p>Bubur Manado alias tinutuan adalah jenis bubur gurih dari Sulawesi Utara. <a class="nav" href="#bahan/bubur">Bubur</a> ini menggunakan sayuran berlimpah, labu, jagung, dan singkong. Biasanya disertakan pula daun gedi.
-      Bubur Manado disajikan bersama sambal bekasang, sejenis terasi yang dibuat dari perut <a class="nav" href="#bahan/ikan">ikan</a> fermentasi. Masih ditambah ikan asin yang digoreng renyah.</p>
+<p>Bubur Manado alias tinutuan adalah jenis bubur gurih dari Sulawesi Utara. <a class="nav" href="#bubur">Bubur</a> ini menggunakan sayuran berlimpah, labu, jagung, dan singkong. Biasanya disertakan pula daun gedi.
+      Bubur Manado disajikan bersama sambal bekasang, sejenis terasi yang dibuat dari perut <a class="nav" href="#ikan">ikan</a> fermentasi. Masih ditambah ikan asin yang digoreng renyah.</p>
 </div>
 </div>
 <div class="row">
