--- a/latihan6/pages/nasibakeporkalimantantimur.html
+++ b/latihan6/pages/nasibakeporkalimantantimur.html
@@ -21,7 +21,7 @@
 </div>
 </div>
 <div class="col m7 s12">
-<p>Nasi Bekepor khas Kutai Kartanegara merupakan nasi yang dicampur dengan <a class="nav" href="#bahan/ikanasin">ikan asin</a>, rempah-rempah, dan minyak sayur.
+<p>Nasi Bekepor khas Kutai Kartanegara merupakan nasi yang dicampur dengan <a class="nav" href="#ikanasin">ikan asin</a>, rempah-rempah, dan minyak sayur.
 Nasi Bekepor biasanya disajikan bersama dengan sayur gangan asam kukar yang merupakan sejenis sayur asem yang diolah bersama dengan kepala ikan dan ubi manis. </p>
 <p>Pada masa zaman Kerajaan Kutai Kartanegara, nasi bekepor merupakan menu khas bagi Raja Kutai Kartanegara, namun kini nasi bekepor bisa dinikmati semua kalangan.
 
