--- a/latihan6/pages/papedatelorayam.html
+++ b/latihan6/pages/papedatelorayam.html
@@ -21,7 +21,7 @@
 </div>
 </div>
 <div class="col m7 s12">
-    <p>Papeda <a class="nav" href ="#bahan/telur">telor</a> <a class="nav" href="#bahan/ayam">ayam</a> Kapurung (Papeda) Makanan khas Papua ini berbahan dasar telur ayam.</p> <p> Ya masyarakat Papua sering menambahkan rempah khas Papua pada olahan ayam pedasnya ini. Sebetulnya tidak harus memakai bumbu balado, kamu bisa ganti Cara Membuat Papeda Telur.</p>
+    <p>Papeda <a class="nav" href ="#telur">telor</a> <a class="nav" href="#ayam">ayam</a> Kapurung (Papeda) Makanan khas Papua ini berbahan dasar telur ayam.</p> <p> Ya masyarakat Papua sering menambahkan rempah khas Papua pada olahan ayam pedasnya ini. Sebetulnya tidak harus memakai bumbu balado, kamu bisa ganti Cara Membuat Papeda Telur.</p>
 <p>Cara Membuat Papeda? Apa yang muncul dalam benak Anda jika mendengar kata Papeda? Apakah bubur dari sagu, dengan kuah kari? Kamu bisa membuat Papeda telor ayam using 8 Bahan-bahan dan 6 cara membuat. begini cara menyajikan.</p>
 </div>
 </div>
