--- a/latihan6/pages/rawonsurabaya.html
+++ b/latihan6/pages/rawonsurabaya.html
@@ -22,7 +22,7 @@
 </div>
 <div class="col m7 s12">
     <p>Resep rawon daging sapi bisa kamu terapkan sebagai sajian Idul Adha. Rawon merupakan hidangan berkuah seperti sup yang berisi potongan lembut daging serta aroma dan warna hitam khas dari buah keluak. Rawon merupakan makanan khas dari Jawa Timur. Rasanya yang begitu menggugah selera membuatnya digemari banyak orang. Bahkan tidak hanya orang Surabaya atau Jawa Timur saja yang gemar menyantapnya, orang-orang dari luar Pulau Jawa, bahkan orang asing dari luar negeri pun menyukainya.</p>
-<p>Resep rawon <a class="nav" href="#bahan/dagingsapi">daging sapi</a> yang enak juga cukup mudah dibuat. Kamu bisa menjadikan daging sapi kurban menjadi santapan yang lezat ini. Idealnya rawon dibuat dari daging sandung lamur atau di dunia kuliner dikenal dengan brisket, yang sedikit berlemak dan enak dimasak lama. Namun, kamu juga bisa menggunakan bagian-bagian lainnya sesuai selera.</p>
+<p>Resep rawon <a class="nav" href="#dagingsapi">daging sapi</a> yang enak juga cukup mudah dibuat. Kamu bisa menjadikan daging sapi kurban menjadi santapan yang lezat ini. Idealnya rawon dibuat dari daging sandung lamur atau di dunia kuliner dikenal dengan brisket, yang sedikit berlemak dan enak dimasak lama. Namun, kamu juga bisa menggunakan bagian-bagian lainnya sesuai selera.</p>
 </div>
 </div>
 <div class="row">
