--- a/latihan6/pages/seblakbandung.html
+++ b/latihan6/pages/seblakbandung.html
@@ -22,7 +22,7 @@
 </div>
 <div class="col m7 s12">
     <p>Siapa sih yang ga tau Seblak? Sekarang, Seblak ini sudah menjadi makanan hits kekinian yang digemari oleh banyak orang selain Bakso Aci
-      dan <a class="nav" href="#bahan/ayam">Ayam</a> Geprek Mozarella.
+      dan <a class="nav" href="#ayam">Ayam</a> Geprek Mozarella.
        Anak muda khususnya generasi milenials pasti tahu dong Seblak itu apa?
         Seblak adalah salah satu makanan khas Indonesia yang berasal dari
         Jawa Barat dengan komposisi utama kerupuk basah dan tambahan bahan
