--- a/latihan6/pages/sopkonro.html
+++ b/latihan6/pages/sopkonro.html
@@ -24,7 +24,7 @@
     <p>Sup Konro adalah masakan sup iga sapi khas Indonesia yang berasal dari tradisi Bugis dan Makassar. Sup ini biasanya dibuat dengan bahan iga sapi atau daging sapi.Masakan berkuah warna coklat kehitaman ini biasa dimakan dengan burasa dan ketupat yang dipotong-potong terlebih dahulu.
        Warna gelap ini berasal dari buah kluwek yang memang berwarna hitam. Bumbunya relatif "kuat" akibat digunakannya ketumbar. Rasa pedas dan berbumbu ini dibuat dari campuran rempah-rempah, seperti ketumbar, keluwak (buah yang menyebabkan masakan berwarna hitam), sedikit pala, kunyit, kencur, kayu manis, asam, daun lemon, cengkih, dan daun salam.
       Konro aslinya dimasak berkuah dalam bentuk sup yang kaya rempah, akan tetapi kini terdapat variasi kering yang disebut "Konro bakar" yaitu iga sapi bakar dengan bumbu khas konro. Konro bakar biasanya juga disajikan dengan disertai kuah sup yang terpisah.</p>
-    <p>Kalau kamu pecinta masakan <a class="nav" href="#bahan/dagingsapi">daging sapi</a>, wajib banget cobain menu khas Makassar sop konro. Kuliner lezat ini memadukan iga sapi dengan rasa bumbu rempah-rempah dan campuran kluwek.
+    <p>Kalau kamu pecinta masakan <a class="nav" href="#dagingsapi">daging sapi</a>, wajib banget cobain menu khas Makassar sop konro. Kuliner lezat ini memadukan iga sapi dengan rasa bumbu rempah-rempah dan campuran kluwek.
       Sop konro merupakan salah satu makanan yang diburu ketika berwisata ke Makassar. Jika kamu belum sempat ke ibu kota Sulawesi Selatan, bikin saja sop konro di rumah. Beirkut ini resep dan cara membuatnya.</p>
     </div>
   </div>
