--- a/latihan6/pages/sotopadang.html
+++ b/latihan6/pages/sotopadang.html
@@ -22,7 +22,7 @@
 <div class="col m7 s12">
 <p>Seperti banyak kuliner lain di Indonesia, soto merupakan hasil akulturasi budaya antara masyarakat Indonesia dengan masyarakat pendatang. Soto muncul sebagai hasil interaksi masyarakat Indonesia dengan bangsa Tiongkok yang datang ke Indonesia. Menurut Dennys Lombard dalam buku “Nusa Jawa: Silang Budaya”, soto merupakan transformasi dari hidangan Tiongkok yang disebut Caudo. Itu pula sebabnya soto memiliki beberapa nama panggilan yang berbeda di beberapa daerah, seperti Coto di Makassar, Tauto di Pekalongan, dll. Tapi di sebagian besar daerah di Indonesia, nama ‘Caudo’ berubah jadi ‘Soto’.</p>
   <p>Belum lengkap rasanya menikmati masakan Minang kalau belum mencoba yang
-    namanya <a class="nav" href="#bahan/soto">Soto</a> Padang. Meskipun banyak masakannya dilabeli dengan kata
+    namanya <a class="nav" href="#soto">Soto</a> Padang. Meskipun banyak masakannya dilabeli dengan kata
     “Padang”, seperti halnya pada satai ataupun rendang, bukan berarti
     semuanya memiliki kesamaan rasa. Bagi yang menggemari masakan Padang
      namun belum mengenal yang satu ini, maka pastinya akan terkejut dengan
