--- a/latihan6/pages/satelilitayamkhasbali.html
+++ b/latihan6/pages/satelilitayamkhasbali.html
@@ -21,7 +21,7 @@
 </div>
 </div>
 <div class="col m7 s12">
-<p> <a class="nav" href="#bahan/ayam">Ayam</a> merupakan salah satu bahan masakan yang bisa diolah menjadi berbagai masakan lezat dan menggugah selera.
+<p> <a class="nav" href="#ayam">Ayam</a> merupakan salah satu bahan masakan yang bisa diolah menjadi berbagai masakan lezat dan menggugah selera.
   Bisa dibuat ayam goreng, ayam kuah, ayam suwir atau sate ayam. Oh iya, kalau ngomongin sate ayam, kali ini Vemale punya resep sate ayam yang lezat dan enaknya kebangetan. </p>
   <p>Sate ayam ini merupakan sate lilit ayam khas Bali. Nggak hanya sangat enak, dipastikan sate lilit ini juga sehat dan lezat banget.
 Untuk membuat sate lilit ayam khas Bali sendiri sangat mudah kok. Mau tahu seperti apa resepnya? Berikut resepnya. </p>
