--- a/latihan6/pages/bubur.html
+++ b/latihan6/pages/bubur.html
@@ -16,7 +16,7 @@
     <div class="col m5 s12">
       <div class="card z-depth-3">
         <div class="card-image">
-    <img src="../../img/buburpolos.jfif" alt="buburpolos" class="img-responsif">
+    <img src="img/buburpolos.jfif" alt="buburpolos" class="img-responsif">
   </div>
 </div>
 </div>
