--- a/latihan6/pages/telur.html
+++ b/latihan6/pages/telur.html
@@ -16,7 +16,7 @@
     <div class="col m5 s12">
       <div class="card z-depth-3">
         <div class="card-image">
-    <img src="../../img/telurayam.jpg" alt="telurayam" class="img-responsif">
+    <img src="img/telurayam.jpg" alt="telurayam" class="img-responsif">
   </div>
 </div>
 </div>
