--- a/latihan8b/index.html
+++ b/latihan8b/index.html
@@ -119,7 +119,7 @@
 
 <fieldset class="row mb-3">
   <div class="form-floating mb-3">
-  <input type="date" id="tgl_lahir" name="tgl_lahir" class="form-control datepicker" required>
+  <input type="date" id="tgl_lahir" name="tgl_lahir" class="form-control date_picker" required>
   <label for="tgl_lahir" >Tanggal Lahir</label>
 </div>
 </fieldset>
